Fixed Navbar Overflow

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,7 +2,7 @@
     background: rgb(0, 20, 43);
     color: white;
     display: flex;
-    width: 100vw;
+    /* width: 100vw; */
     justify-content: space-between;
     padding: 0.4rem 6rem 0.2rem 1.5rem;
     box-shadow: 0px 2px 6px 4px rgba(0, 0, 0, 0.2);
